[gd_scene load_steps=20 format=3 uid="uid://jolhvsfm1d1o"]

[ext_resource type="Texture2D" uid="uid://vyr0ks75oxum" path="res://graphics/characters/drone.png" id="1_gs6nb"]
[ext_resource type="Script" uid="uid://cv28o5gavxtfg" path="res://scripts/drone.gd" id="1_n87ok"]
[ext_resource type="Shader" uid="uid://bgy7ndx4q4x2m" path="res://shaders/drone.tres" id="2_6vf5s"]
[ext_resource type="Texture2D" uid="uid://bav7n447bnsa5" path="res://graphics/fire/explosion.png" id="3_xcp44"]
[ext_resource type="Texture2D" uid="uid://dijla4pisrrw8" path="res://graphics/lights/main.png" id="4_0tq5o"]
[ext_resource type="AudioStream" uid="uid://dtnqyh7corvdx" path="res://audio/explosion.wav" id="6_in55t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_in55t"]
shader = ExtResource("2_6vf5s")

[sub_resource type="AtlasTexture" id="AtlasTexture_n87ok"]
atlas = ExtResource("1_gs6nb")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcp44"]
atlas = ExtResource("1_gs6nb")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tq5o"]
atlas = ExtResource("1_gs6nb")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vf5s"]
atlas = ExtResource("1_gs6nb")
region = Rect2(96, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_in55t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n87ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcp44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tq5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vf5s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_n87ok"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xcp44"]
radius = 94.0

[sub_resource type="Animation" id="Animation_6vf5s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_in55t"]
resource_name = "drone_light_flicker"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.43333334, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.35, 3.0, 1.0]
}

[sub_resource type="Animation" id="Animation_0tq5o"]
resource_name = "new_animation"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 1.4052306),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"explosionAnimation"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_in55t"]
_data = {
&"RESET": SubResource("Animation_6vf5s"),
&"drone_light_flicker": SubResource("Animation_in55t"),
&"new_animation": SubResource("Animation_0tq5o")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_lvif6"]
radius = 12.0

[node name="Drone" type="CharacterBody2D" groups=["Drones"]]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_n87ok")

[node name="DroneSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_in55t")
sprite_frames = SubResource("SpriteFrames_in55t")
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="DroneCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_n87ok")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DetectionArea" type="CollisionShape2D" parent="DetectionArea"]
visible = false
shape = SubResource("CircleShape2D_xcp44")

[node name="MoveRandomTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ExplosionSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_xcp44")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ExplosionSprite")
libraries = {
&"": SubResource("AnimationLibrary_in55t")
}
autoplay = "drone_light_flicker"

[node name="CollisonArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisonArea"]
shape = SubResource("CircleShape2D_lvif6")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-3, 2)
color = Color(1, 0, 0, 1)
texture = ExtResource("4_0tq5o")
texture_scale = 0.1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_in55t")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="MoveRandomTimer" to="." method="_on_move_random_timer_timeout"]
[connection signal="body_entered" from="CollisonArea" to="." method="_on_collison_area_body_entered"]
